--- a/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
+++ b/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
@@ -161,14 +161,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
+    "## Discussão\n",
     "Usamos o algoritmo genético para resolver o problema das caixas não binárias, ou seja, agora os genes podem ser diferentes de 0 ou 1. Escolhemos o range de 0 e 100 para cada gene.  \n",
     "\n",
     "Para poder usar as mesmas funções, estamos salvando todas elas em um arquivo .py que podem ser chamados depois. Outra estratégia que estamos usando é a de criar funções locais para poder adicionar variáveis as funções anteriores que já estão compondo nosso algoritmo genético, dessa maneira não precisamos mudá-las todas as vezes que uma função objetivo fica mais complexa, por exemplo.  \n",
     "\n",
     "Usamos 4 genes, ou caixas, para compor um indivíduo, ainda tivemos que escolher o número de gerações, chance de cruzamento, chance de mutação, apenas adicionamos o valor máximo de cada caixa, agora era 100. \n",
     "\n",
-    "Nosso resultado ainda é probabilístico, tendo em vista que sabemos o valor máximo de fitness e ele não aparece (400, caso todos os genes fossem iguais a 100) além de que cada vez que rodamos o código um valor diferente aparecia para os indivíduos."
+    "Nosso resultado ainda é probabilístico, tendo em vista que sabemos o valor máximo de fitness e ele não aparece (400, caso todos os genes fossem iguais a 100) além de que cada vez que rodamos o código um valor diferente aparecia para os indivíduos.\n",
+    "\n",
+    "# Conclusão\n",
+    "\n",
+    "Retomando o que fizemos nesse experimento. Neste problema, os genes podem ter valores diferentes de 0 ou 1, com um range de 0 a 100 para cada gene. Para simplificar o processo, todas as funções foram salvas em um arquivo .py para que pudessem ser chamadas depois. \n",
+    "\n",
+    "Foram usadas quatro caixas para compor um indivíduo, com um número definido de gerações, chance de cruzamento e chance de mutação. O resultado é probabilístico, já que o valor máximo de fitness não aparece e cada vez que o código é executado, um valor diferente aparece para os indivíduos. Além disso, foram usadas estratégias para criar funções locais e adicionar variáveis às funções existentes para tornar o processo mais eficiente."
    ]
   },
   {
