--- a/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
+++ b/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
@@ -172,9 +172,9 @@
     "\n",
     "# Conclusão\n",
     "\n",
-    "Retomando o que fizemos nesse experimento. Neste problema, os genes podem ter valores diferentes de 0 ou 1, com um range de 0 a 100 para cada gene. Para simplificar o processo, todas as funções foram salvas em um arquivo .py para que pudessem ser chamadas depois. \n",
+    "Retomando o que fizemos nesse experimento. Neste problema, os genes podem ter valores diferentes de 0 ou 1, com um range de 0 a 100 para cada gene.Foram usadas quatro caixas para compor um indivíduo, com um número definido de gerações, chance de cruzamento e chance de mutação. \n",
     "\n",
-    "Foram usadas quatro caixas para compor um indivíduo, com um número definido de gerações, chance de cruzamento e chance de mutação. O resultado é probabilístico, já que o valor máximo de fitness não aparece e cada vez que o código é executado, um valor diferente aparece para os indivíduos. Além disso, foram usadas estratégias para criar funções locais e adicionar variáveis às funções existentes para tornar o processo mais eficiente."
+    "Para simplificar o processo, todas as funções foram salvas em um arquivo .py para que pudessem ser chamadas depois. Além disso, foram usadas estratégias para criar funções locais e adicionar variáveis às funções existentes para tornar o processo mais eficiente.O resultado é probabilístico, já que o valor máximo de fitness não é conhecido e cada vez que o código é executado, um valor diferente aparece para os indivíduos."
    ]
   },
   {
