--- a/RedesNeurais/experimento R.02 - classes.ipynb
+++ b/RedesNeurais/experimento R.02 - classes.ipynb
@@ -80,10 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "caio = Dados() #objeto caio"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(caio.dado1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Material object at 0x7f74aeebebc0>\n",
+      "<__main__.Material object at 0x00000212D6CB9B50>\n",
       "100\n"
      ]
     }
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,10 +213,11 @@
    "source": [
     "class Material:\n",
     "    def __init__(self, modulo_elastico):\n",
-    "        self.modulo_elastico = modulo_elastico\n",
+    "        self.modulo_elastico = modulo_elastico # Cria o modulo elástico dentro da minha classe material\n",
     "\n",
     "    def __repr__(self):\n",
     "        return f\"Material com módulo elástico de {self.modulo_elastico} GPa.\"\n",
+    "    \n",
     "\n",
     "modulo_elastico_do_meu_material = 100\n",
     "meu_material = Material(modulo_elastico_do_meu_material)\n",
@@ -234,9 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "class Material:\n",
     "    def __init__(self, modulo_elastico):\n",
@@ -244,9 +265,17 @@
     "\n",
     "    def __repr__(self):\n",
     "        return f\"Material com módulo elástico de {self.modulo_elastico} GPa.\"\n",
+    "    \n",
+    "    def tensao(self, deformacao):\n",
+    "        valor_tensao = self.modulo_elastico * deformacao\n",
+    "        return valor_tensao\n",
     "\n",
     "modulo_elastico_do_meu_material = 100\n",
-    "meu_material = Material(modulo_elastico_do_meu_material)"
+    "meu_material = Material(modulo_elastico_do_meu_material)\n",
+    "\n",
+    "deformacao =2\n",
+    "tensao = meu_material.tensao(deformacao)\n",
+    "print(tensao)"
    ]
   },
   {
@@ -267,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,10 +429,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Material:\n",
+    "    def __init__(self, entalpia):\n",
+    "        self.potencial_de_combustao = entalpia\n",
+    "        self.volume = 0\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Material com potencial de combustão de {self.potencial_de_combustao}UA. Com volume de {self.volume}L\"\n",
+    "    \n",
+    "    def enchendo_o_tanque(self):\n",
+    "        if self.volume < 55:\n",
+    "            self.potencial_de_combustao = self.potencial_de_combustao + 10\n",
+    "            self.volume = self.volume + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Material com potencial de combustão de 25UA. Com volume de 10L\n",
+      "Material com potencial de combustão de 35UA. Com volume de 20L\n",
+      "Material com potencial de combustão de 45UA. Com volume de 30L\n",
+      "Material com potencial de combustão de 55UA. Com volume de 40L\n",
+      "Material com potencial de combustão de 65UA. Com volume de 50L\n",
+      "Material com potencial de combustão de 75UA. Com volume de 60L\n",
+      "Material com potencial de combustão de 75UA. Com volume de 60L\n"
+     ]
+    }
+   ],
+   "source": [
+    "combustao = 15\n",
+    "meu_material = Material(combustao)\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)\n",
+    "\n",
+    "meu_material.enchendo_o_tanque()\n",
+    "print(meu_material)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussão\n",
+    "\n",
+    "Na aula de hoje seguimos a lógica de uso de classes e de estados do objeto para construir um raciocícinio em redes neurais. Tudo que vimos na primeira aula, a teoria, conseguimos aplicar de verdade ao código.\n",
+    "Começamos por definir uma classe, vimos que existem funções dentro delas que o python já conhece e sabe as ações que tomam, basta apenas definilas. Esses são os dunders, aprensdemos dois: `__repr__` e `__init__`. O `__init__` serve para guardar informações às classes, o `__repr__` controla a maneira como as informações presentes na classe é apresentada.\n",
+    "\n",
+    "Aprendemos também que podemos fazer as nossas próprias funções dentro das classes, não apenas as pré existentes. Com isso conseguimos executar a principal motivação para o uso das classes: preocupar com o estado dos nossos dados e com a sua mudança."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,16 +518,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Classes são como receitas, contem diversas funções/dados, e comporta diversas estruturas para esses dados como listas, dicionários, objetos.\n",
+    "As funções dentro das classes são chamadas de métodos.\n",
+    "\n",
+    "O método `__init__` é um *dunder*, que é uma função dentro de classes já pré definidas. Ela serve para guardar informações.\n",
+    "Todos dunder's usam dois sublinhados para identifica-los pois são pré existentes, eles seguem suas prórpias regras que já existem no mundo phyton, não inventamos o `__init__` nem o `__repr__`. Self indica a própria classe, ele funciona para dunder's.\n",
+    "\n",
+    "Classes podem ter métodos que não são dunders, esses nós definimos as regras e sua usabilidade, definimos sua ação.\n",
+    "\n",
+    "Quando nós resolvemos algoritmos genéticos usamos as funções: essa é uma programação funcional, nelas preocupamos com as ações (seleção, cruzamentos, mutações). Quando pensamos em classes, pensamos em estados, em como se encontra o nosso objeto, suas \"caracteristicas\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Playground\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    import graphviz\n",
+    "except ModuleNotFoundError:\n",
+    "    import sys\n",
+    "    !{sys.executable} -m pip install graphviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Material com potencial de combustão de 45 UA.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(meu_material)"
+   ]
   }
  ],
  "metadata": {
@@ -445,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
