--- a/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
+++ b/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,10 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor(data=60)\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = Valor(60)\n",
+    "print(x1)\n",
+    "print(x1.data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,18 +136,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'Valor' and 'Valor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_7204/3864629426.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Valor' and 'Valor'"
+     ]
+    }
+   ],
    "source": [
     "print(a + b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'Valor' and 'Valor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_7204/2640154986.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'Valor' and 'Valor'"
+     ]
+    }
+   ],
    "source": [
     "print(a * b)"
    ]
@@ -151,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,10 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor(data=15)\n",
+      "Valor(data=50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Valor(10)\n",
+    "b = Valor(5)\n",
+    "print(a + b)\n",
+    "print(a * b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,10 +290,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Valor(data=10), Valor(data=5))\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Valor(10)\n",
+    "b = Valor(5)\n",
+    "\n",
+    "c = a+b\n",
+    "d = a * b\n",
+    "print(c.progenitor)\n",
+    "print(d.data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,10 +368,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Valor(data=10), Valor(data=5))\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Valor(10)\n",
+    "b = Valor(5)\n",
+    "\n",
+    "c = a+b\n",
+    "d = a * b\n",
+    "print(c.progenitor)\n",
+    "print(d.operador_mae)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,9 +408,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digraph {\n",
+      "\tgraph [rankdir=LR]\n",
+      "\t3120114776096 [label=\"{  | data -3.0000 }\" shape=record]\n",
+      "\t3120113612928 [label=\"{  | data 2.0000 }\" shape=record]\n",
+      "\t3120113613648 [label=\"{  | data 4.0000 }\" shape=record]\n",
+      "\t\"3120113613648+\" [label=\"+\"]\n",
+      "\t\"3120113613648+\" -> 3120113613648\n",
+      "\t3120113611632 [label=\"{  | data 10.0000 }\" shape=record]\n",
+      "\t3120113614752 [label=\"{  | data -6.0000 }\" shape=record]\n",
+      "\t\"3120113614752*\" [label=\"*\"]\n",
+      "\t\"3120113614752*\" -> 3120113614752\n",
+      "\t3120114776096 -> \"3120113614752*\"\n",
+      "\t3120113611632 -> \"3120113613648+\"\n",
+      "\t3120113614752 -> \"3120113613648+\"\n",
+      "\t3120113612928 -> \"3120113614752*\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = Valor(2)\n",
     "b = Valor(-3)\n",
@@ -334,7 +443,8 @@
     "d = a * b\n",
     "e = d + c\n",
     "\n",
-    "plota_grafo(e)"
+    "grafo = plota_grafo(e)\n",
+    "print(grafo)"
    ]
   },
   {
@@ -355,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,9 +504,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digraph {\n",
+      "\tgraph [rankdir=LR]\n",
+      "\t3120113613408 [label=\"{ d | data -6.0000 }\" shape=record]\n",
+      "\t\"3120113613408*\" [label=\"*\"]\n",
+      "\t\"3120113613408*\" -> 3120113613408\n",
+      "\t3120112269968 [label=\"{ b | data -3.0000 }\" shape=record]\n",
+      "\t3120113614224 [label=\"{ e | data 4.0000 }\" shape=record]\n",
+      "\t\"3120113614224+\" [label=\"+\"]\n",
+      "\t\"3120113614224+\" -> 3120113614224\n",
+      "\t3120113121696 [label=\"{ a | data 2.0000 }\" shape=record]\n",
+      "\t3120113120208 [label=\"{ c | data 10.0000 }\" shape=record]\n",
+      "\t3120113613408 -> \"3120113614224+\"\n",
+      "\t3120112269968 -> \"3120113613408*\"\n",
+      "\t3120113120208 -> \"3120113614224+\"\n",
+      "\t3120113121696 -> \"3120113613408*\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = Valor(2, rotulo=\"a\")\n",
     "b = Valor(-3, rotulo=\"b\")\n",
@@ -408,7 +542,9 @@
     "d.rotulo = \"d\"\n",
     "e.rotulo = \"e\"\n",
     "\n",
-    "plota_grafo(e)"
+    "plota_grafo(e)\n",
+    "grafo = plota_grafo(e)\n",
+    "print(grafo)"
    ]
   },
   {
@@ -429,10 +565,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x1 = Valor(60, rotulo = \"x1\")\n",
+    "x2 = Valor(24, rotulo = \"x2\")\n",
+    "w1 =Valor(10, rotulo = \"w1\")\n",
+    "w2 = Valor(5, rotulo = \"w2\")\n",
+    "w3 = Valor(2, rotulo = \"w3\")\n",
+    "b= Valor(7, rotulo = \"b\")\n",
+    "\n",
+    "s1 = x1*w1\n",
+    "s1.rotulo = 's1'\n",
+    "\n",
+    "s2 = x2*w2\n",
+    "s2.rotulo = 's2'\n",
+    "\n",
+    "n = s1+s2\n",
+    "n.rotulo = 'n'\n",
+    "\n",
+    "k = n+b\n",
+    "k.rotulo = 'k'\n",
+    "\n",
+    "y= k*w3\n",
+    "y.rotulo = 'y'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -440,6 +598,13 @@
    "source": [
     "## Conclusão\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "um objeto novo é uma instancia, ou seja, o estado do objeto em um determinado momento/ etapa do código."
    ]
   },
   {
@@ -495,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
