--- a/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
+++ b/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
@@ -596,15 +596,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
-    "\n"
+    "### discussão\n",
+    "\n",
+    "Continuamos com o uso de classes para representar nosso conjunto de dados. Nesse tipo de armazenamento de informações temos algumas funções já conhecidas, nessa aula aprendemos os métodos `__add__` e `__mul__`, que como vimos no notebook anterior são chamadas de dunders. O método `__add__` é usado para adicionar os valores que o seu objeto possui e o `__mul__` irá multiplicar. Cada um desses dunders usam um operador especifico, o `__add__` usa o `+` e o `__mul__` usa o `*`, eles realmente fazem as operações matemáticas cujos simbolos nos remetem.\n",
+    "\n",
+    "\n",
+    "No segunod momento dessa aula, registramos as ações que nosso métodos executaram por meio de um grafo. O primeiro passo foi regristrar os progenitores, os \"pais\" dos nossos próximos valores, depois regr"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "um objeto novo é uma instancia, ou seja, o estado do objeto em um determinado momento/ etapa do código."
+    "## Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na continuação do exercicio anterior, nesse experimento pudemos botar em prática todos assuntos discutidos na primeira aula teorica de redes neurais. Aqui aprendemos os raciocinios de uma classe e quando devemos usa-las. Nesse exercicio, criamos uma classe que gerou automaticamente o nosso grafo computacional. O grafo computacional era o grafo que representava todas as operações matemáticas que ocorreram ao se computar um certo valor 𝑦.Nos atentamos aos grafos pois serão com eles que faremos o backpropagation.\n",
+    "\n",
+    "\n",
+    "Observações durante a aula:\n",
+    "- Um objeto novo é uma instancia, ou seja, o estado do objeto em um determinado momento/ etapa do código."
    ]
   },
   {
