--- a/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
+++ b/RedesNeurais/experimento R.03 - construindo um grafo automaticamente.ipynb
@@ -601,7 +601,7 @@
     "Continuamos com o uso de classes para representar nosso conjunto de dados. Nesse tipo de armazenamento de informações temos algumas funções já conhecidas, nessa aula aprendemos os métodos `__add__` e `__mul__`, que como vimos no notebook anterior são chamadas de dunders. O método `__add__` é usado para adicionar os valores que o seu objeto possui e o `__mul__` irá multiplicar. Cada um desses dunders usam um operador especifico, o `__add__` usa o `+` e o `__mul__` usa o `*`, eles realmente fazem as operações matemáticas cujos simbolos nos remetem.\n",
     "\n",
     "\n",
-    "No segunod momento dessa aula, registramos as ações que nosso métodos executaram por meio de um grafo. O primeiro passo foi regristrar os progenitores, os \"pais\" dos nossos próximos valores, depois regr"
+    "No segunod momento dessa aula, registramos as ações que nosso métodos executaram por meio de um grafo. O primeiro passo foi regristrar os progenitores, os \"pais\" dos nossos próximos valores, depois registramos quais ações que são tomadas, soma ou multiplicação, e então o valor resultante, ou \"filho\". Com essas informações pudemos contruir nosso grafo"
    ]
   },
   {
@@ -629,34 +629,6 @@
     "## Playground\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
