--- a/RedesNeurais/experimento R.04 - computando gradientes locais.ipynb
+++ b/RedesNeurais/experimento R.04 - computando gradientes locais.ipynb
@@ -2576,6 +2576,7 @@
     "#### Objetivo da aula:\n",
     "Queremos que nosso grafo plote: nome, dado, gradiente calculado automático.\n",
     "\n",
+    "#### Como implementamos:\n",
     "Adicionamos o gradiente como propriedade no meu init e falei que o valor é 0. Assim a função já plota a propriedade gradiente como 0. Usar o 0 é uma maneira de evitar erros, pois é nulo para soma.\n",
     "\n",
     "Calculamos primeiro o grandiente \"a mão\", fomos pensando sem usar o programa. Como é back propagation nós começamos do vértice folha e seguimos retrocedendo para os vértices anteriores. O raciocinio segue:\n",
